1. Add the feature to record modem status and error counts in the json file state.json; 2. Remove the test dbus and qmi code when an error occurs; 3. Fix get ModemManager index getting stuck forever;

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,14 +2,13 @@ ARG BALENA_ARCH=%%BALENA_ARCH%%
 
 FROM balenalib/$BALENA_ARCH-alpine
 
-RUN install_packages dbus bash iproute2 iputils coreutils python3 py3-gobject3 libqmi
+RUN install_packages dbus bash iproute2 iputils coreutils jq usbutils
 
 WORKDIR /app
 
 COPY entry.sh ./
 COPY gpio ./
 COPY VERSION ./
-COPY simple-tester-python ./
-RUN chmod +x ./gpio && chmod +x ./entry.sh && chmod +x ./simple-tester-python
+RUN chmod +x ./gpio && chmod +x ./entry.sh
 
 ENTRYPOINT  ["bash","./entry.sh"]
