Import env from env file. Now, we add an environment variable: CG_ENV_FILE, it defaults to cellular_guard.env, meanwhile, modifying the value of cellular_guard.env  can modify the CG environment variable, meanwhile, you can modify the environment variable CG_ENV_FILE to modify the location of the environment variable file before running the CG

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,9 +6,6 @@ RUN install_packages dbus bash iproute2 iputils coreutils jq usbutils
 
 WORKDIR /app
 
-COPY entry.sh ./
-COPY gpio ./
-COPY VERSION ./
-RUN chmod +x ./gpio && chmod +x ./entry.sh
+COPY --chmod=755 entry.sh gpio VERSION cellular_guard.env ./
 
-ENTRYPOINT  ["bash","./entry.sh"]
+ENTRYPOINT ["bash","./entry.sh"]
