Fix state.json not update after version changed; Add count of frequency data success clear to state.json;

--- a/cellular_guard.env
+++ b/cellular_guard.env
@@ -3,10 +3,11 @@
 # CHECK_INTERVAL='1h'
 
 # The ping wait time gradient for restarting the modem in the"network connection check loop".
-# Unit must be second
+# Unit must be second, length must larger than 3
 # PING_INTERVALS='60 600 600 3600'
 
 # Gradient of ping error limit for modem restart in "network connection check loop".
+# The length must be the same as PING_INTERVALS
 # MAX_PING_ERROR_COUNT='4 4 4 4'
 
 # The ping check cycle when the network is normal in the "network connection check loop".
