Support new board EBC-RS16; fix lsusb unable to initialize usb spec warning;

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@ ARG BALENA_ARCH=%%BALENA_ARCH%%
 
 FROM balenalib/$BALENA_ARCH-alpine
 
-RUN install_packages dbus bash iproute2 iputils coreutils jq usbutils
+RUN install_packages dbus bash iproute2 iputils coreutils jq usbutils eudev-hwids
 
 WORKDIR /app
 
